// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
  1 | {a:[
> 2 | 1,2,
    | ^^^^
> 3 | 3],
    | ^
  4 | "b":
  5 | 2}
  6 | 
=====================================output=====================================
{a:[
1,2,
3],
"b":
2}

================================================================================
`;

exports[`array-2.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
      |                                                                                | printWidth
=====================================input======================================
   1 | {a:[
   2 | [
>  3 | 1,2,
     | ^^^^
>  4 | 3],
     | ^
   5 | [4,5,
   6 | 6]
   7 | ],
   8 | "b":
   9 | 2}
  10 | 
=====================================output=====================================
{a:[
[
1,2,
3],
[4,5,
6]
],
"b":
2}

================================================================================
`;

exports[`array-3.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
      |                                                                                | printWidth
=====================================input======================================
   1 | {a:[
   2 | [
>  3 | 1,2,
     | ^^^^
>  4 | 3],
     | ^^^
>  5 | [4,5,
     | ^^^
   6 | 6]
   7 | ],
   8 | "b":
   9 | 2}
  10 | 
=====================================output=====================================
{a:[
[
1,2,
3],
[4,5,
6]
],
"b":
2}

================================================================================
`;

exports[`boolean-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {a:true,
    |    ^^^^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{a:true,
"b":
2}

================================================================================
`;

exports[`identifier.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
rangeEnd: 4
rangeStart: 1
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |  ^^^
  2 | 
=====================================output=====================================
{"a":1, "b":2}

================================================================================
`;

exports[`issue-4009.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {
    |  ^
> 2 |     "foo": "bar"
    | ^^^^^^^^^^^^^^^^
> 3 | }
    | ^
  4 | 
=====================================output=====================================
{
    "foo": "bar"
}

================================================================================
`;

exports[`issue-7116.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | { "b": 2 }
    |      ^^^^
  2 | 
=====================================output=====================================
{ "b": 2 }

================================================================================
`;

exports[`issue2297.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
rangeEnd: 6
rangeStart: 5
     |                                                                                | printWidth
=====================================input======================================
> 1 | {"a":1, "b":2}
    |      ^
  2 | 
=====================================output=====================================
{"a":1, "b":2}

================================================================================
`;

exports[`null-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {a:null,
    |    ^^^^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{a:null,
"b":
2}

================================================================================
`;

exports[`number-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {a:1,
    |    ^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{a:1,
"b":
2}

================================================================================
`;

exports[`number-2.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {1:1,
    |  ^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{1:1,
"b":
2}

================================================================================
`;

exports[`object-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {a:{shouldBePretty:
    |     ^^^^^^^^^^^^^^^
> 2 | true,
    | ^^^^^
> 3 | },
    | ^
  4 | "b":
  5 | 2}
  6 | 
=====================================output=====================================
{a:{ "shouldBePretty": true },
"b":
2}

================================================================================
`;

exports[`object-2.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
  1 | {a:{
> 2 |       deep: {shouldBePretty:
    |              ^^^^^^^^^^^^^^^
> 3 | true,
    | ^^^^^
> 4 | }
    | ^
  5 | },
  6 | "b":
  7 | 2}
  8 | 
=====================================output=====================================
{a:{
      deep: { "shouldBePretty": true }
},
"b":
2}

================================================================================
`;

exports[`object-3.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
      |                                                                                | printWidth
=====================================input======================================
   1 | {a:{
>  2 |       deep: {shouldBePretty:
     |              ^^^^^^^^^^^^^^^
>  3 | true,
     | ^^^^^
>  4 | },another: {shouldBePretty:
     | ^^^^^
>  5 | 2,
     | ^^^^^
>  6 | 
     | ^
   7 | }
   8 | },
   9 | "b":
  10 | 2}
  11 | 
=====================================output=====================================
{a:{
      deep: {shouldBePretty:
true,
},another: {shouldBePretty:
2,

}
},
"b":
2}

================================================================================
`;

exports[`pr-8082-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | [ "b", {"c":1}, {"f":3} ]
    |        ^^^^^^^^^^^
  2 | 
=====================================output=====================================
[ "b", {"c":1}, {"f":3} ]

================================================================================
`;

exports[`pr-8082-2.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | { "b": 2, "c": 3 }
    |        ^^^^^^^^^
  2 | 
=====================================output=====================================
{ "b": 2, "c": 3 }

================================================================================
`;

exports[`string-1.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {a:'a',
    |    ^^^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{a:"a",
"b":
2}

================================================================================
`;

exports[`string-2.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
     |                                                                                | printWidth
=====================================input======================================
> 1 | {'a':1,
    |  ^^^
  2 | "b":
  3 | 2}
  4 | 
=====================================output=====================================
{"a":1,
"b":
2}

================================================================================
`;
